# geni-personal-website

./: README.md  pyproject.toml  tes.py
geni_website/: manage.py
geni_website/geni_website/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
